python/testData/inspections/AddParameterNotAvailableInsideAnnotation.py
def test(counter: <error descr="Unresolved reference 'unresolved'">unresol<caret>ved</error>):
    pass